# TopoBenchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  ZINC.sh  __init__.py  cell_hp_search.sh  cell_hp_search_onetune.sh  codecov.yml  compare_results.ipynb  conda.sh  curvature.ipynb  curvature_plots.sh  env.bash  env.sh  env_setup.sh  format_and_lint.sh  hp_search.sh  hparams_search.sh  index.html  kan_scripts copy.sh  kan_scripts.sh  onegraph_search.sh  permissions.sh  prepare_data.sh  prova_simplex.ipynb  pyproject.toml  rep_cwn.sh  rep_scnn.sh  reproduce_cwn_onetune.sh  reproduce_cwn_tune.sh  reproduce_sccn_onetune.sh  reproduce_sccn_tune.sh  rest_cell.sh  result_processing.ipynb  run_1  run_2  sanitycheck_scripts.sh  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  lint.yml  python-app.yml  test.yml
configs/: __init__.py  run.yaml  test.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  regression.yaml
configs/data/: coauthorship_cora.yaml
configs/dataset/: AQSOL.yaml  IMDB-BINARY.yaml  IMDB-MULTI.yaml  MUTAG.yaml  NCI1.yaml  NCI109.yaml  PROTEINS_TU.yaml  REDDIT-BINARY.yaml  ZINC.yaml  amazon_ratings.yaml  coauthorship_citeseer.yaml  coauthorship_cora.yaml  cocitation_citeseer.yaml  cocitation_cora.yaml  cocitation_cora_add.yaml  cocitation_pubmed.yaml  karate_club.yaml  manual_dataset.yaml  minesweeper.yaml  questions.yaml  roman_empire.yaml  tolokers.yaml  us_country_demos.yaml  us_county_demos.yaml
configs/evaluator/: classification.yaml  default.yaml  regression.yaml  (+1 more)
docs/: conf.py  index.rst
notebooks/: __init__.py  cornel_dataset.ipynb  curvature.ipynb  curvature_results.ipynb  data.ipynb  dataset_statistics.ipynb  play.ipynb  play_notebook.ipynb  prova_simplex.ipynb  result_processing.ipynb  simplicial.ipynb  test.ipynb  test_cellular_lifting_dev.ipynb  test_feature_lifting_dev.ipynb  test_hypergraph_lifting_dev.ipynb  test_simplicialclique_dev.ipynb  tests.ipynb  try_mutag_lift.ipynb
results/: ablation_cellular.csv  ablation_simplicial.csv  additional_data.ipynb  best_parameters_cell.csv  best_parameters_graph.csv  best_parameters_hypergraph.csv  best_parameters_simplicial.csv  best_results_cell.csv  best_results_graph.csv  best_results_hypergraph.csv  best_results_simplicial.csv  best_runs_graph.csv  best_runs_graph.json  data_simplicial.ipynb  final_table.ipynb  main_results.csv  model_sizes_cell.csv  model_sizes_graph.csv  model_sizes_hypergraph.csv  model_sizes_simplicial.csv  results_ cell.ipynb  results_ simplicial.ipynb  results_graph.ipynb  results_hypergraph.ipynb
scripts/: best_parameters.json  best_parameters_cell.json  best_parameters_graph.json  best_parameters_hypergraph.json  best_parameters_simplicial.json  check_sann.sh  curvature.sh  curvature_july.sh  download_gpse.sh  generate_scripts.ipynb  gpse_mutag.sh  gpse_nci1.sh  gpse_nci109.sh  gpse_proteins.sh  gpse_zinc.sh  h36m-gcnext.sh  main_script.sh  main_script_nofeat.sh  random_nci1.sh  random_nci109.sh  random_zinc.sh  reproduce.sh  sann_mutag.sh  sann_nci1.sh  sann_nci109.sh  sann_proteins.sh  sann_zinc.sh  sweep_gpse.sh  test_gpse.sh  test_rand.sh  test_sann.sh
tables/: cell_statistics.csv  dataset_statistics.csv
test/: conftest.py  test_tutorials.py
topobenchmark/: __init__.py  run.py
topobenchmarkx/: =0.12.10  __init__.py  __main__.py  cell.sh  complex.py  curvature_plot.py  curvature_plot_rewire.py  dataset_statistics.py  datasets.sh  eval.py  exp.sh  graph_search.sh  graph_search2.sh  hp_search.bash  hypergraph.sh  hypergraph2.sh  hypergraph_3.sh  hypergraph_4.sh  hypergrpah_search.sh  play.ipynb  print_numbers.sh  run.py  run_cellular_scripts.sh  run_graph_scripts.sh  run_hypergraph_scripts.sh  simplex.sh  simplicial.sh  stat.sh  train.py
tutorials/: NPHA-doctor-visits_2.csv  add_new_dataset.ipynb  batching.ipynb  dtrees copy.ipynb  dtrees.ipynb  group_homophily_tutorial.ipynb  health_data.ipynb  homophily_tutorial copy.ipynb  homophily_tutorial.ipynb  load_dataset.ipynb  mantra.ipynb  tutorial_add_custom_dataset.ipynb  tutorial_add_own_dataset.ipynb  tutorial_dataset.ipynb  tutorial_lifting.ipynb  tutorial_model.ipynb  tutorial_sann.ipynb
(+964 files in other folders)
